--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,14 +7,14 @@ allprojects {
 }
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
         minSdkVersion 8
-        targetSdkVersion 27
-        versionCode 2
-        versionName "1.1"
+        targetSdkVersion 29
+        versionCode 3
+        versionName "1.2"
     }
     buildTypes {
         release {
@@ -26,8 +26,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    testImplementation 'junit:junit:4.13.2'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.6'
     implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation 'com.github.tony19:logback-android-core:1.1.1-6'
